sample-api/manifests/Service-sample-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-api
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/instance: demo-sample-api
  ports:
    - name: http
      port: 8080
