sample-api/manifests/HTTPRoute-sample-api.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sample-api
spec:
  hostnames:
    - api.demo.localhost
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway
      namespace: gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: sample-api
          namespace: sample-api
          port: 8080
          weight: 100
